--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 
-<title>404 - Page not found</title>
+<title>404 :P</title>
+  <link rel="icon" type="image/png" href="img/profile.png">
 <style>
   html,
 body {
