dont look at this

--- a/404.html
+++ b/404.html
@@ -1,3 +1,6 @@
+<comment style="opacity: 0;">
+       shut up i know this is rippped
+</comment>
 
 <title>404 :P</title>
   <link rel="icon" type="image/png" href="img/profile.png">
