add back cursor idk

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div class="custom-cursor"></div>
   <div class="container">
     <div class="profile">
       <img src="img/profile.png" class="profile">
@@ -46,6 +47,11 @@ fn main() {
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
   <script>
     hljs.highlightAll();
+    document.addEventListener('mousemove', (e) => {
+      const cursor = document.querySelector('.custom-cursor');
+      cursor.style.left = e.pageX + 'px';
+      cursor.style.top = e.pageY + 'px';
+    });
   </script>
 </body>
 
