--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     #buttons-container {
       display: flex;
+      gap: 10px;
       flex-direction: column;
       align-content: flex-end;
       width: 200px;
@@ -64,7 +65,6 @@
     }
 
     .caub-button {
-      width: 100%;
       width: 170px;
       align-self: flex-end;
     }
