changed buttons future funcitons

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
       margin: 1px;
     }
 
-    .github-button {
+    .about-button {
       border-radius: 50px 160px 20px 160px;
     }
 
-    .caub-button {
+    .blog-button {
       width: 170px;
       align-self: flex-end;
     }
 
-    .jslinux-button {
+    .socials-button {
       border-radius: 160px 50px 100px 20px;
     }
   </style>
@@ -81,14 +81,14 @@
       <img id="avatar" src="img/143876484.jpeg" alt="GitHub Avatar">
     </div>
     <div id="buttons-container">
-      <div class="button github-button">
-        Github
+      <div class="button about-button">
+        About
       </div>
-      <div class="button caub-button">
-        Caub
+      <div class="button blog-button">
+        Blog
       </div>
-      <div class="button jslinux-button">
-        JsLinux
+      <div class="button socials-button">
+        Socials
       </div>
   </div>
   </div>
