removed img alt for better codespace preview dev

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
   <div id="container">
     <div id="avatar-container">
-      <img id="avatar" src="img/143876484.jpeg" alt="GitHub Avatar">
+      <img id="avatar" src="img/143876484.jpeg">
     </div>
     <div id="buttons-container">
       <div class="button about-button">
