--- a/index.html
+++ b/index.html
@@ -1,80 +1,10 @@
-<header>
-  <style>
-    @font-face {
-      font-family: "Comfortaa";
-      src: url("fonts/Comfortaa.ttf");
-    }
-
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #E9DAB3;
-      font-family: 'Comfortaa';
-    }
-
-    img {
-      box-shadow: 0 0 10px rgba(233, 218, 179, 1);
-    }
-
-    #container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 800px;
-      height: 500px;
-      background-color: white;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 1);
-      border-radius: 20px;
-    }
-
-    #avatar-container {
-      width: 200px;
-      height: 200px;
-    }
-
-    #avatar {
-      width: 100%;
-      height: 100%;
-      border-radius: 100%;
-    }
-
-    #buttons-container {
-      display: flex;
-      gap: 10px;
-      flex-direction: column;
-      align-content: flex-end;
-      width: 200px;
-      height: 200px;
-    }
-
-    .button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #E9DAB3; 
-      box-shadow: 0 0 10px rgba(233, 218, 179, 1);
-      width: 100%;
-      height: 100%;
-      border-radius: 15px;
-      margin: 1px;
-    }
-
-    .about-button {
-      border-radius: 50px 160px 20px 160px;
-    }
-
-    .blog-button {
-      width: 170px;
-      align-self: flex-end;
-    }
-
-    .socials-button {
-      border-radius: 160px 20px 160px 50px;
-    }
-  </style>
-</header>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>cloudirectors site</title>
+</head>
 <body>
   <div id="container">
     <div id="avatar-container">
