knock off mid pfp

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="container">
     <div id="avatar-container">
-      <img id="avatar" src="img/143876484.jpeg">
+      <img id="avatar" src="img/143876484.jpg">
     </div>
     <div id="buttons-container">
       <div class="button about-button">
