--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <title>Cloudirector's Site</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#4E7370">
   <meta name="description" content="My blog for any personal projects or events."/>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/x-icon" href="img/favicon.ico">
