--- a/404.html
+++ b/404.html
@@ -1,1 +1,36 @@
-<!-- todo -->
+<html data-theme="dark">
+
+</html>
+
+<head>
+    <title>404</title>
+    <link href="css/daisyui.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <script src="js/tailwindcss.js"></script>
+</head>
+
+<body class="bg-base-100 text-base-content">
+    <div class="container mx-auto p-5">
+        <!-- Text Area -->
+        <div class="flex items-center h-20">
+            <div role="alert" class="alert alert-error">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6 shrink-0 stroke-current"
+                  fill="none"
+                  viewBox="0 0 24 24">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+                <span>404, Page not found. </span>
+            </div>
+        </div>
+    </div>
+</body>
+
+<script src="js/script.js"></script>
+
+</html>
