remove cringe blur and add note

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             </div>
         </div>
         <!-- Content -->
+        <!-- Add cool animation to focous brainrot text on some gesture -->
         <div class="flex items-center justify-center gap-10 bg-base-200 p-5 rounded-xl shadow-md mr-4 w-full">
-          <div class="avatar blur-sm m-10">
+          <div class="avatar m-10">
             <div class="w-80 rounded-xl">
               <img src="img/cloudirector.jpg" />
             </div>
