--- a/404.html
+++ b/404.html
@@ -1,18 +1,13 @@
+<!-- do something cool here -->
 <html data-theme="dark">
-
-</html>
-
 <head>
     <title>404</title>
     <link href="css/daisyui.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
     <script src="js/tailwindcss.js"></script>
 </head>
-
 <body class="bg-base-100 text-base-content">
     <div class="container mx-auto p-5">
-        <!-- Text Area -->
-        <div class="flex items-center h-20">
             <div role="alert" class="alert alert-error">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -27,10 +22,7 @@
                 </svg>
                 <span>404, Page not found. </span>
             </div>
-        </div>
     </div>
 </body>
-
 <script src="js/script.js"></script>
-
 </html>
