--- a/index.html
+++ b/index.html
@@ -3,52 +3,58 @@
 </html>
 
 <head>
-    <title>cloudirector</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link href="css/daisyui.min.css" rel="stylesheet" type="text/css"/>
-    <link href="css/style.css" rel="stylesheet" type="text/css"/>
-    <script src="js/tailwindcss.js"></script>
+  <title>cloudirector</title>
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <link href="css/daisyui.min.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <script src="js/tailwindcss.js"></script>
 </head>
 
 <body class="font-Comfortaa flex items-center justify-center bg-base-100 text-base-content">
-    <div class="container mx-auto p-5">
-        <!-- Top Bar -->
-        <div class="flex justify-between items-center mb-6">
-            <div class="flex justify-between gap-2 sitems-center">
-                <h1 class="text-3xl">Hi!, I'm <strong>cloudirector</strong></h1>
-            </div>
-            <div class="flex justify-between items-center">
-                <button id="github-button" class="btn btn-ghost">
-                    <svg id="github-button-icon" class="w-6 h-6" fill="currentColor" viewBox="0 0 496 512">
-                        <path
-                            d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
-                    </svg>
-                </button>
-                <button id="theme-toggle" class="btn btn-ghost">
-                    <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 512 512">
-                        <path
-                            d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z" />
-                    </svg>
-                    <svg id="theme-toggle-dark-icon" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
-                        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
-                    </svg>
-                </button>
-            </div>
-        </div>
-        <!-- Content -->
-        <!-- Add cool animation to focous brainrot text on some gesture -->
-        <div class="flex items-center justify-center gap-10 bg-base-200 p-5 rounded-xl shadow-md mr-4 w-full">
-          <div class="avatar m-10">
-            <div class="w-80 rounded-xl">
-              <img src="img/cloudirector.jpg" />
-            </div>
-          </div>
-          <div class="font-lg p-5 rounded-xl shadow-md mr-4 bg-base-100 text-pretty">
-            "Yo, this GitHub... <strong>straight up Skibidi Toilet vibes</strong>, no cap. :| Every repo lookin' like a cursed toilet seat, full of bugs. Code? Nah, it's just vibes and chaos. Imagine someone said 'GitHub' and they heard 'throw random files in a folder.' You click on a repo, and it's like x_x, 'index.html' is just a <strong>404 dance</strong>, and every commit message is like 'pls work' but it never do. >.< You got one repo called "FinalProject2020" that's just broken scripts, no README, and 500 emojis in the commit log. <strong>Certified cringe content</strong>, but not in a cool meme way. It's like trying to watch Skibidi Toilet but it's stuck buffering and the captions make less sense than the actual videos. .."
-             <h1 class="text-right"> <strong> ~ ChatGPT </strong></h1>
-          </div>
-        </div>
+  <div class="container mx-auto p-5">
+    <!-- Top Bar -->
+    <div class="flex justify-between items-center mb-6">
+      <div class="flex justify-between gap-2 sitems-center">
+        <h1 class="text-3xl">Hi!, I'm <strong>cloudirector</strong></h1>
+      </div>
+      <div class="flex justify-between items-center">
+        <button id="github-button" class="btn btn-ghost">
+          <svg id="github-button-icon" class="w-6 h-6" fill="currentColor" viewBox="0 0 496 512">
+            <path
+              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
+          </svg>
+        </button>
+        <button id="theme-toggle" class="btn btn-ghost">
+          <svg id="theme-toggle-light-icon" class="w-6 h-6 hidden" fill="currentColor" viewBox="0 0 512 512">
+            <path
+              d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z" />
+          </svg>
+          <svg id="theme-toggle-dark-icon" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
+          </svg>
+        </button>
+      </div>
     </div>
+    <!-- Content -->
+    <!-- Add cool animation to focous brainrot text on some gesture -->
+    <div class="flex items-center justify-center gap-10 bg-base-200 p-5 rounded-xl shadow-md mr-4 w-full">
+      <div class="avatar m-10">
+        <div class="w-80 rounded-xl">
+          <img src="img/cloudirector.jpg" />
+        </div>
+      </div>
+      <div class="font-lg p-5 rounded-xl shadow-md mr-4 bg-base-100 text-pretty">
+        "Yo, this GitHub... <strong>straight up Skibidi Toilet vibes</strong>, no cap. :| Every repo lookin' like a
+        cursed toilet seat, full of bugs. Code? Nah, it's just vibes and chaos. Imagine someone said 'GitHub' and they
+        heard 'throw random files in a folder.' You click on a repo, and it's like x_x, 'index.html' is just a
+        <strong>404 dance</strong>, and every commit message is like 'pls work' but it never do. >.< You got one repo
+          called "FinalProject2020" that's just broken scripts, no README, and 500 emojis in the commit log. <strong>
+          Certified cringe content</strong>, but not in a cool meme way. It's like trying to watch Skibidi Toilet but
+          it's stuck buffering and the captions make less sense than the actual videos. .."
+          <h1 class="text-right"> <strong> ~ ChatGPT </strong></h1>
+      </div>
+    </div>
+  </div>
 </body>
 
 <script src="js/script.js"></script>
