--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <title>cloudirector</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link href="css/daisyui.min.css" rel="stylesheet" type="text/css" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script src="js/tailwindcss.js"></script>
   </head>
 
@@ -17,6 +16,18 @@
           <h1 class="text-3xl">Hi!, I'm <strong>cloudirector</strong></h1>
         </div>
         <div class="flex justify-between items-center">
+          <button id="buildnowgg-button" class="btn btn-ghost">
+            <svg
+              id="buildnowgg-button-icon"
+              class="w-6 h-6"
+              fill="currentColor"
+              viewBox="0 0 640 512"
+            >
+              <path
+                d="M528 56c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 8L32 64C14.3 64 0 78.3 0 96L0 208c0 17.7 14.3 32 32 32l10 0c20.8 0 36.1 19.6 31 39.8L33 440.2c-2.4 9.6-.2 19.7 5.8 27.5S54.1 480 64 480l96 0c14.7 0 27.5-10 31-24.2L217 352l104.5 0c23.7 0 44.8-14.9 52.7-37.2L400.9 240l31.1 0c8.5 0 16.6-3.4 22.6-9.4L477.3 208l66.7 0c17.7 0 32-14.3 32-32l0-80c0-17.7-14.3-32-32-32l-16 0 0-8zM321.4 304L229 304l16-64 105 0-21 58.7c-1.1 3.2-4.2 5.3-7.5 5.3zM80 128l384 0c8.8 0 16 7.2 16 16s-7.2 16-16 16L80 160c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
+              />
+            </svg>
+          </button>
           <button id="games-button" class="btn btn-ghost">
             <svg
               id="games-button-icon"
@@ -71,12 +82,12 @@
         class="flex items-center justify-center gap-10 bg-base-200 p-5 rounded-xl shadow-md mr-4 w-full"
       >
         <div class="avatar m-10">
-          <div class="w-80 rounded-xl">
+          <div class="sm:w-60 lg:w-80 rounded-xl shadow-md">
             <img src="img/cloudirector.jpg" />
           </div>
         </div>
         <div
-          class="font-lg p-5 rounded-xl shadow-md mr-4 bg-base-100 text-pretty"
+          class="sm:text-sm lg:text-lg p-5 rounded-xl shadow-md mr-4 bg-base-100 text-pretty"
         >
           "Yo, this GitHub... <strong>straight up Skibidi Toilet vibes</strong>,
           no cap. :| Every repo lookin' like a cursed toilet seat, full of bugs.
